Implement data ingestion pipeline with configuration and artifact management

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,8 @@ dmypy.json
 *.m4a
 *.csv
 
+# =====================================
+# Logs and Artifacts
+# =====================================
+logs/
+artifacts/
