--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
+#*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -137,8 +137,4 @@ dmypy.json
 *.m4a
 *.csv
 
-# =====================================
-# Logs and Artifacts
-# =====================================
-logs/
-artifacts/
+
