feat: update .gitignore to exclude old virtual environments and add notebook files; update requirements.txt to include additional dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ ENV/
 env.bak/
 venv.bak/
 venv_old_broken/
+venv_old/
 
 
 # Spyder project settings
@@ -144,3 +145,5 @@ dmypy.json
 *.pth
 *.h5
 *.pkl
+# notebook
+*.ipynb
