feat: enhance data transformation configuration and artifact structure; add command execution utility

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,41 @@ python-dotenv
 pandas
 numpy
 ipykernel
+jupyter
 matplotlib
 seaborn
 scikit-learn
+tqdm
 librosa
-pyaml
-Pillow
+soundfile
+resampy
 torch
 torchvision
 torchaudio
+timm                
+torchcodec          
+panns-inference     
+torch-vggish-yamnet 
 mlflow
 dagshub
-soundfile
-jupyter
-timm
-resampy
-torch-vggish-yamnet
-torchcodec
-##-e .
+Pillow
+
+# =============================================================================
+# Classical Audio Feature Extractors (NOT pip installable)
+# =============================================================================
+# openSMILE : ComParE / eGeMAPS
+# Download manually:
+# https://github.com/audeering/opensmile
+
+# openXBOW : Bag-of-Audio-Words (BoAW)
+# Download manually:
+# https://github.com/openXBOW/openXBOW
+
+# =============================================================================
+# AUDEEP (Optional – requires TensorFlow 1.x; incompatible with Python >= 3.10)
+# =============================================================================
+# audeep==0.2.1
+# tensorflow==1.15.5
+# Recommended: run AUDEEP in a separate Python 3.7/3.8 environment
+
+#-e .
