Update requirements.txt to restrict mlflow version and add xgboost

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,10 @@ timm
 torchcodec          
 panns-inference     
 torch-vggish-yamnet 
-mlflow
+mlflow<2.17.0
 dagshub
 Pillow
 opensmile
-
+xgboost
 
 #-e .
