Refactor CI workflow to improve structure and clarity; add comments for better understanding of steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,14 @@ permissions:
   contents: read
 
 jobs:
+
+  # ------------------------------
+  # 1) Continuous Integration
+  # ------------------------------
   integration:
     name: Continuous Integration
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -25,10 +30,15 @@ jobs:
       - name: Run unit tests
         run: echo "Running unit tests"
 
+
+  # ------------------------------
+  # 2) Build + Push Docker Image to Amazon ECR
+  # ------------------------------
   build-and-push-ecr-image:
     name: Continuous Delivery
     needs: integration
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -38,6 +48,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq unzip
 
+      # ------------------------------
+      # Configure AWS credentials
+      # ------------------------------
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -45,18 +58,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      # ------------------------------
+      # Login to ECR
+      # ------------------------------
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
-          IMAGE_TAG: latest
-        run: |
-          # Build a docker container and push it to ECR
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+      # ------------------------------
+      # Build + Push Docker Image
+      # ------------------------------
+      - name: Build and push Docker image to Amazon ECR
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          # FIXED TAG --> ensures one tag only
+          tags: "${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest"
