--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,3 +77,55 @@ jobs:
             --tag "${SANITIZED_REGISTRY}/${SANITIZED_REPOSITORY}:${IMAGE_TAG}" \
             --push .
           echo "image=${SANITIZED_REGISTRY}/${SANITIZED_REPOSITORY}:${IMAGE_TAG}" >> $GITHUB_OUTPUT
+
+  continuous-deployment:
+    name: Continuous Deployment
+    needs: build-and-push-ecr-image
+    runs-on: self-hosted   
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Pull image built in previous job
+        run: |
+          IMAGE="${{ needs.build-and-push-ecr-image.outputs.image }}"
+          echo "Pulling image: $IMAGE"
+          docker pull "$IMAGE"
+
+      - name: Stop and remove previous container if exists
+        run: |
+          if [ "$(docker ps -aq -f name=visioninfantnet)" ]; then
+            echo "Container 'visioninfantnet' exists, stopping and removing..."
+            docker stop visioninfantnet || true
+            docker rm visioninfantnet || true
+          else
+            echo "No existing 'visioninfantnet' container found."
+          fi
+
+      - name: Run Docker container (VisionInfantNet API)
+        run: |
+          IMAGE="${{ needs.build-and-push-ecr-image.outputs.image }}"
+          echo "Starting container from image: $IMAGE"
+
+          docker run -d -p 8080:8080 --ipc="host" \
+            --name=visioninfantnet \
+            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -e AWS_REGION=${{ secrets.AWS_REGION }} \
+            "$IMAGE"
+
+      - name: Clean previous images and containers
+        run: |
+          docker system prune -f
