--- a/.gitignore
+++ b/.gitignore
@@ -82,8 +82,8 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-.python-version
+# pyenv - keep .python-version tracked for uv
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -168,4 +168,33 @@ data/audio/raw/
 artifacts/
 final_model/
 data/
+.dvc/cache/
+.dvc/tmp/
+.dvc/plots/
+
+# =====================================
+# UV (Astral package manager)
+# =====================================
+.uv_cache/
+uv.lock
+
+# =====================================
+# Uploaded & temporary files
+# =====================================
+uploaded_audio/
+uploaded_zips/
+
+# =====================================
+# Terraform
+# =====================================
+infra/terraform/**/*.tfstate
+infra/terraform/**/*.tfstate.backup
+infra/terraform/**/.terraform/
+infra/terraform/**/.terraform.lock.hcl
+
+# =====================================
+# Monitoring & Drift
+# =====================================
+artifacts/drift/
+logs/
 
