--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,8 @@ dependencies = [
     "dvc-s3>=3.0.0",
     "prometheus-client>=0.19.0",
     "evidently>=0.4.0",
+    "seaborn>=0.13.2",
+    "matplotlib>=3.10.8",
 ]
 
 [project.optional-dependencies]
@@ -105,4 +107,11 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
-addopts = "-v --cov=src/vocalbaby --cov-report=html --cov-report=term"
+addopts = "-v"
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
+    "ruff>=0.15.0",
+]
