--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,55 +1,161 @@
+# =============================================================================
+# VocalBaby Feature Comparison Pipeline - DVC Configuration
+# =============================================================================
+# This pipeline orchestrates end-to-end ML workflow for comparing XGBoost
+# performance across multiple acoustic feature sets.
+#
+# Usage:
+#   dvc repro              # Run entire pipeline
+#   dvc repro evaluate     # Run up to evaluation stage
+#   dvc repro <stage>      # Run specific stage and dependencies
+#
+# =============================================================================
+
 stages:
-  ingestion:
-    cmd: bash scripts/run_ingestion.sh
+  # ---------------------------------------------------------------------------
+  # STAGE 01: DATA INGESTION
+  # ---------------------------------------------------------------------------
+  # Loads raw audio + metadata, creates child-disjoint train/valid/test splits
+  ingest:
+    cmd: bash scripts/01_ingest.sh
     deps:
       - data/metadata/private_metadata.csv
       - data/audio/raw
       - data_schema/schema.yaml
       - src/vocalbaby/components/data_ingestion.py
+      - src/vocalbaby/pipeline/stage_01_ingest.py
+    params:
+      - data.raw_audio_dir
+      - data.raw_metadata_file
+      - data.schema_file
     outs:
       - artifacts/latest/data_ingestion/ingested_metadata:
           cache: true
       - artifacts/latest/data_ingestion/ingested_audio:
           cache: true
 
-  validation:
-    cmd: bash scripts/run_validation.sh
+  # ---------------------------------------------------------------------------
+  # STAGE 02: DATA VALIDATION
+  # ---------------------------------------------------------------------------
+  # Validates schema, checks data quality, detects drift
+  validate:
+    cmd: bash scripts/02_validate.sh
     deps:
       - artifacts/latest/data_ingestion
       - src/vocalbaby/components/data_validation.py
+      - src/vocalbaby/pipeline/stage_02_validate.py
     outs:
       - artifacts/latest/data_validation/validation_report.yaml:
+          cache: true
+      - artifacts/latest/data_validation/validated:
           cache: true
     metrics:
       - artifacts/latest/data_validation/drift_report/drift_report.yaml:
           cache: false
 
-  training:
-    cmd: bash scripts/run_training.sh
+  # ---------------------------------------------------------------------------
+  # STAGE 03: FEATURE EXTRACTION
+  # ---------------------------------------------------------------------------
+  # Generates features for all configured feature sets
+  transform:
+    cmd: bash scripts/03_transform.sh
     deps:
-      - artifacts/latest/data_validation
-      - src/vocalbaby/components/data_transformation.py
-      - src/vocalbaby/components/model_trainer.py
-      - configs/model.yaml
+      - artifacts/latest/data_validation/validated
+      - src/vocalbaby/features
+      - src/vocalbaby/pipeline/stage_03_transform.py
+      - params.yaml
+    params:
+      - features.sets
+      - features.egemaps
+      - features.mfcc
+      - features.hubert_ssl
+      - features.wav2vec2_ssl
     outs:
-      - artifacts/latest/model_trainer/trained_model:
+      - artifacts/features:
           cache: true
-      - artifacts/latest/model_trainer/preprocessing:
+
+  # ---------------------------------------------------------------------------
+  # STAGE 04: HYPERPARAMETER TUNING
+  # ---------------------------------------------------------------------------
+  # Runs Optuna optimization for each feature set
+  tune:
+    cmd: bash scripts/04_tune.sh
+    deps:
+      - artifacts/features
+      - src/vocalbaby/models
+      - src/vocalbaby/pipeline/stage_04_tune.py
+      - params.yaml
+    params:
+      - features.sets
+      - tuning.n_trials
+      - tuning.objectives
+      - tuning.xgb_search_space
+    outs:
+      - artifacts/models:
           cache: true
-    metrics:
-      - artifacts/latest/model_trainer/confusion_matrices:
+
+  # ---------------------------------------------------------------------------
+  # STAGE 05: MODEL TRAINING
+  # ---------------------------------------------------------------------------
+  # Trains final XGBoost models with best hyperparameters
+  train:
+    cmd: bash scripts/05_train.sh
+    deps:
+      - artifacts/features
+      - artifacts/models  # Contains best_params.json from tuning
+      - src/vocalbaby/models
+      - src/vocalbaby/pipeline/stage_05_train.py
+      - params.yaml
+    params:
+      - features.sets
+      - preprocessing
+      - training
+    outs:
+      - artifacts/models:
+          cache: true
+
+  # ---------------------------------------------------------------------------
+  # STAGE 06: MODEL EVALUATION
+  # ---------------------------------------------------------------------------
+  # Evaluates models on valid + test, saves confusion matrices and metrics
+  evaluate:
+    cmd: bash scripts/06_evaluate.sh
+    deps:
+      - artifacts/features
+      - artifacts/models  # Trained models
+      - src/vocalbaby/eval
+      - src/vocalbaby/pipeline/stage_06_evaluate.py
+      - params.yaml
+    params:
+      - features.sets
+      - evaluation.metrics
+      - evaluation.confusion_matrix
+      - evaluation.eval_splits
+    outs:
+      - artifacts/eval:
           cache: false
     plots:
-      - artifacts/latest/model_trainer/confusion_matrices:
+      - artifacts/eval:
           cache: false
 
-  drift:
-    cmd: bash scripts/run_drift.sh
+  # ---------------------------------------------------------------------------
+  # STAGE 07: RESULTS AGGREGATION
+  # ---------------------------------------------------------------------------
+  # Aggregates metrics across feature sets into comparison table
+  aggregate:
+    cmd: bash scripts/07_aggregate.sh
     deps:
-      - artifacts/latest/data_transformation/features
-      - src/vocalbaby/monitoring/drift.py
-      - configs/drift.yaml
+      - artifacts/eval
+      - src/vocalbaby/pipeline/stage_07_aggregate.py
+      - params.yaml
+    params:
+      - features.sets
+      - aggregation.columns
+      - aggregation.sort_by
     outs:
-      - artifacts/drift:
-          cache: true
-          persist: true
+      - artifacts/results/results_summary.csv:
+          cache: false
+    metrics:
+      - artifacts/results/results_summary.csv:
+          cache: false
+
