--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "vocalbaby"
 version = "1.0.0"
 description = "VocalBaby - Production ML system for infant cry analysis using XGBoost and eGeMAPS features"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
     {name = "Arun Prakash Singh", email = "mail.arun1289@gmail.com"},
@@ -55,7 +55,8 @@ dependencies = [
     "prometheus-client>=0.19.0",
     "evidently>=0.4.0",
     "seaborn>=0.13.2",
-    "matplotlib>=3.10.8",
+    "matplotlib>=3.5.0",
+    "transformers>=4.30.0",
 ]
 
 [project.optional-dependencies]
