--- a/.gitignore
+++ b/.gitignore
@@ -164,10 +164,10 @@ dmypy.json
 *.7z
 
 # DVC files
-data/audio/raw/
+/data/audio/raw/
 artifacts/
 final_model/
-data/
+/data/
 .dvc/cache/
 .dvc/tmp/
 .dvc/plots/
