Add confusion matrix images to README
- Add 8 confusion matrix PNGs (valid+test for all 4 feature sets) to images/
- Add .gitignore exception for images/*.png
- README image paths point to images/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,10 @@ dmypy.json
 *.tiff
 *.gif
 
+# Allow confusion matrix images in images/ folder
+!images/
+!images/*.png
+
 # archives
 *.zip
 *.tar.gz
