feat: Implement hierarchical classification pipeline
- Added evaluation script for hierarchical classification () to run inference on valid/test splits and save metrics, confusion matrices, and reports.
- Introduced training script for hierarchical classification () to train XGBoost models for emotional and non-emotional stages.
- Created hyperparameter tuning script for hierarchical classification () using Optuna for stage-specific tuning.
- Updated pipeline stages to support hierarchical classification, including tuning, training, evaluation, and aggregation.
- Enhanced existing pipeline stages (, , , ) to accommodate both flat and hierarchical classification modes.

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -90,6 +90,8 @@ stages:
       - tuning.n_trials
       - tuning.objectives
       - tuning.xgb_search_space
+      - classification.mode
+      - classification.use_class_weights
     outs:
       - artifacts/latest/tuning:
           cache: true
@@ -110,6 +112,7 @@ stages:
       - features.sets
       - preprocessing
       - training
+      - classification.mode
     outs:
       - artifacts/latest/models:
           cache: true
@@ -131,6 +134,7 @@ stages:
       - evaluation.metrics
       - evaluation.confusion_matrix
       - evaluation.eval_splits
+      - classification.mode
     outs:
       - artifacts/latest/eval:
           cache: false
@@ -149,6 +153,7 @@ stages:
       - features.sets
       - aggregation.columns
       - aggregation.sort_by
+      - classification.mode
     metrics:
       - artifacts/latest/results/results_summary.csv:
           cache: false
